2000-05-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* Makefile.am:  Let 'make clean' remove *.x and *.doc files.

	* __scm.h:  Improved explanation of giving options to make.

	* __scm.h (SCM_DEBUG_TYPING_STRICTNESS), tags.h
	(SCM_STRICT_TYPING, SCM_DEBUG_TYPING_STRICTNESS):  Renamed
	SCM_STRICT_TYPING to SCM_DEBUG_TYPING_STRICTNESS and moved the
	corresponding declaration and comment to __scm.h.

	* _scm.h (errno), gc.h (SCM_CELLPTR, SCM_PTR_LT), numbers.c
	(scm_remainder, scm_modulo), numbers.h (SCM_SRS, SCM_MAKINUM,
	SCM_INUM):  Removed conditionally compiled code for Turbo C.

	* gdbint.c (gdb_maybe_valid_type_p):  Eliminated call to scm_tag.
	That check can be assumed to be redundant except for very rare
	conditions that actually indicate broken heap data.

2000-05-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_logcount, scm_integer_length):  Reordered
	dispatch sequence.

2000-05-15  Gary Houston  <ghouston@arglist.com>

        * stime.c (scm_strftime): don't reset TZ if zone is an empty
	string.  append a "0" to the zone for TZ.
	
2000-05-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_logbit_p, scm_bit_extract):  Reordered dispatch
	sequence.

	(scm_bit_extract):  Fixed handling of bignums.

2000-05-15  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* async.c (scm_sys_gc_async_thunk), chars.h (SCM_ICHRP, SCM_ICHR,
	SCM_MAKICHR), continuations.h (SCM_SETJMPBUF), error.c
	(scm_sysmissing), error.h (scm_sysmissing), evalext.c
	('serial-map), ioext.c (scm_fseek), ioext.h (scm_fseek),
	keywords.c (scm_tc16_kw, scm_init_keywords), ports.h (SCM_CRDY,
	SCM_INPORTP, SCM_OUTPORTP), ramap.c ('serial-array-copy!,
	'serial-array-map!), smob.c (scm_newsmob), smob.h (scm_smobfuns,
	scm_newsmob), tag.c (scm_tag), tag.h (scm_tag), tags.h
	(scm_tc16_flo, scm_tc_flo, scm_tc_dblr, scm_tc_dblc):  Wrapped
	deprecated code between #if (SCM_DEBUG_DEPRECATED == 0) #endif.

	* fports.c (scm_fport_buffer_add), ports.c (scm_input_port_p,